Set new title and styling for title

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <title>Index</title>
+    <title>Javascript Turtle App</title>
     <script defer src="/build/bundle.js"></script>
 </head>
 <body>
