Made path modification for express site

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Javascript Turtle App</title>
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="/games/build/bundle.js"></script>
 </head>
 <body>
     <div id="app">Index file placeholder</div>
