--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
     <script defer src="/build/bundle.js"></script>
 </head>
 <body>
-    <div id="app">Index file placeholder</div>
+    <div id="app"></div>
 </body>
 </html>
